modules/gdscript/tests/scripts/parser/errors/top_level_if.gd
extends Node

if true:
	pass

func test():
	if true:
		pass
